Fix too narrow height tabs in "Metal" theme

--- a/webextensions/sidebar/styles/metal/metal.css
+++ b/webextensions/sidebar/styles/metal/metal.css
@@ -60,7 +60,7 @@
 .closebox {
   background: none transparent;
   border: 0 none;
-  padding: 3px 3px 5px;
+  padding: 5px 3px 7px;
 }
 
 
